--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
+    "react-scripts": "^5.0.1",
     "sweetalert2": "^11.7.32"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "react-error-overlay": "6.0.9",
     "vite": "^4.4.5"
   }
 }
